--- a/domain.yml
+++ b/domain.yml
@@ -5,26 +5,23 @@ intents:
   - requirements
   - procedure
   - self
+  - thanks
 
 responses:
   utter_greet:
-  - text: "Hey! How are you?"
-
-  utter_cheer_up:
-  - text: "Here is something to cheer you up:"
-    image: "https://i.imgur.com/nGF1K8f.jpg"
-
-  utter_did_that_help:
-  - text: "Did that help you?"
-
-  utter_happy:
-  - text: "Great, carry on!"
+  - text: "Hey! How can I help you?"
 
   utter_goodbye:
   - text: "Bye"
 
-  utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
+  utter_procedure:
+  - text: "Nothing Much. Just visit our center in your city. You can donate your commodities there."
+
+  utter_self_information:
+  - text: "We act as an mediator between the needy and the donor. We always ensure that every needy gets satisfied."
+
+  utter_thanks:
+  - text: "My pleasure :)"
 
 session_config:
   session_expiration_time: 60
