--- a/domain.yml
+++ b/domain.yml
@@ -7,6 +7,10 @@ intents:
   - self
   - thanks
 
+entities:
+  - city
+  - commodity
+
 responses:
   utter_greet:
   - text: "Hey! How can I help you?"
